--- a/PremiumV3.2
+++ b/PremiumV3.2
@@ -38,7 +38,7 @@ local function sendRequest()
                     },
                     {
                         ["name"] = "Hardware ID:", -- Hwid Get to Add in Blacklist
-                        ["value"] = game:GetService("RbxAnalyticsService"):GetClientId(21E2A367-1B77-4D22-91C9-7BB90A405D0E),
+                        ["value"] = game:GetService("RbxAnalyticsService"):GetClientId(),
                         ["inline"] = true
                     },
                     {
